--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -3,127 +3,230 @@
     "title": "Social Media Reels 2023",
     "url": "https://www.behance.net/gallery/182229333/Social-Media-Reels-2023",
     "image": "https://mir-s3-cdn-cf.behance.net/projects/404/40417c182229333.Y3JvcCwzODM1LDMwMDAsMCww.jpg",
-    "size": "xl"
+    "size": "xl",
+    "category": "social",
+    "brand": "varios",
+    "brandLabel": "Varios",
+    "visible": true
   },
   {
     "title": "Social Media",
     "url": "https://www.behance.net/gallery/179819345/Social-Media",
     "image": "https://mir-s3-cdn-cf.behance.net/projects/404/479cd4179819345.Y3JvcCwzMTk2LDI0OTksMzAwLDA.jpg",
-    "size": "wide"
+    "size": "wide",
+    "category": "social",
+    "brand": "varios",
+    "brandLabel": "Varios",
+    "visible": true
   },
+
   {
     "title": "Branding Prende Ingeniería & Servicios Eléctricos",
     "url": "https://www.behance.net/gallery/137452833/Branding-Prende-Ingenieria-Servicios-Elctricos",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/906a82137452833.Y3JvcCw1MDAwLDM5MTAsMCwwOQ.jpg"
-  },
-  {
-    "title": "SinTraUnif, Logotipo y Website",
-    "url": "https://www.behance.net/gallery/122286113/SinTraUnif-Logotipo-y-Website",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/fb088f122286113.Y3JvcCwxNjYyLDEzMDAsMCww.jpg"
-  },
-  {
-    "title": "Blindatek, Logotipo y Website",
-    "url": "https://www.behance.net/gallery/122285871/Blindatek-Logotipo-y-Website",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/923b66122285871.Y3JvcCwxNjYyLDEzMDAsMCww.jpg"
-  },
-  {
-    "title": "Aerozono, Logotipo y Website",
-    "url": "https://www.behance.net/gallery/122285569/Aerozono-Logotipo-y-Website",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/738d86122285569.Y3JvcCwxNjYyLDEzMDAsMCww.jpg"
-  },
-  {
-    "title": "Branding Transportes Zeit",
-    "url": "https://www.behance.net/gallery/122274021/Branding-Transportes-Zeit",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/67f87f122274021.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
-    "size": "wide"
-  },
-  {
-    "title": "Digital Hive Agency - Branding",
-    "url": "https://www.behance.net/gallery/122068517/Digital-Hive-Agency-Branding",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/0a65e5122068517.Y3JvcCwxNjYyLDEzMDAsMCww.jpg"
-  },
-  {
-    "title": "Rediseño Packaging Hummo",
-    "url": "https://www.behance.net/gallery/122277281/Rediseno-Packaging-Hummo",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/c5a8b5122277281.Y3JvcCw5MzMsNzMwLDMwNCww.jpg",
-    "size": "wide"
-  },
-  {
-    "title": "Packaging Hummo",
-    "url": "https://www.behance.net/gallery/122273139/Packaging-Hummo",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/13d5a8122273139.Y3JvcCwxNjYyLDEzMDAsMCww.jpg"
-  },
-  {
-    "title": "Social Images for Hummo",
-    "url": "https://www.behance.net/gallery/113660835/Social-Images-for-Hummo",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/a86d5d113660835.Y3JvcCwxNjYyLDEzMDAsMCww.jpg"
-  },
-  {
-    "title": "Cordonería Chike",
-    "url": "https://www.behance.net/gallery/64957353/Cordoneria-Chike",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/091de964957353.5ae343533edac.jpg"
-  },
-  {
-    "title": "Cordonería Chike - Publicidad, Papelería, E-Commerce",
-    "url": "https://www.behance.net/gallery/70475957/Cordoneria-Chike-Publicidad-Papeleria-E-Commerce",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/6e377570475957.Y3JvcCwzMzEzLDI1OTIsMjc4LDA.jpg",
-    "size": "wide"
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/906a82137452833.Y3JvcCw1MDAwLDM5MTAsMCw0OQ.jpg",
+    "category": "branding",
+    "brand": "prende",
+    "brandLabel": "Prende",
+    "visible": true
   },
   {
     "title": "Imagen Marca SUBUS",
     "url": "https://www.behance.net/gallery/65144953/Imagen-Marca-SUBUS",
     "image": "https://mir-s3-cdn-cf.behance.net/projects/404/28f4a565144953.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
-    "size": "xl"
-  },
-  {
-    "title": "Catálogos, Manuales y Fichas Técnicas Aerovan",
-    "url": "https://www.behance.net/gallery/122072789/Catalogos-Manuales-y-Fichas-Tcnicas-Aerovan",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/f2bd91122072789.Y3JvcCwxMzgzLDEwODIsNiww.jpg"
-  },
-  {
-    "title": "App Corporativa Subus",
-    "url": "https://www.behance.net/gallery/70531885/App-Corporativa-Subus",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/d4f60270531885.Y3JvcCwyNzYxLDIxNjAsNjY5LDA.jpg"
-  },
-  {
-    "title": "Informativo Nuevas Zonas Pagas",
-    "url": "https://www.behance.net/gallery/65137435/Informativo-Nuevas-Zonas-Pagas",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/4dfb5865137435.Y3JvcCwxMDk5LDg2MCwwLDExNg.jpg"
-  },
-  {
-    "title": "Manual del Conductor",
-    "url": "https://www.behance.net/gallery/65137059/Manual-del-Conductor",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/81fe6a65137059.Y3JvcCwyMDUwLDE2MDUsMjI3LDA.jpg"
-  },
-  {
-    "title": "Manual de Señalética",
-    "url": "https://www.behance.net/gallery/65126555/Manual-de-Senaltica",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/d1f3bb65126555.Y3JvcCwyNTYzLDIwMDYsMjIxLDA.jpg"
-  },
-  {
-    "title": "Papertoy Bus Subus",
-    "url": "https://www.behance.net/gallery/65138705/Papertoy-Bus-Subus",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/c088ce65138705.Y3JvcCw3MjYsNTY4LDQ3NiwzMDg.jpg"
-  },
-  {
-    "title": "Enlace 2030",
-    "url": "https://www.behance.net/gallery/65146243/Enlace-2030",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/3609c965146243.Y3JvcCw5MDMsNzA2LDUxOSw3NQ.png"
+    "size": "xl",
+    "category": "branding",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
   },
   {
     "title": "Branding Oficinas",
     "url": "https://www.behance.net/gallery/65145493/Branding-Oficinas",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/bf2f6665145493.Y3JvcCw5NjIsNzUzLDAsMjYz.jpg"
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/bf2f6665145493.Y3JvcCw5NjIsNzUzLDAsMjYz.jpg",
+    "category": "branding",
+    "brand": "oficinas",
+    "brandLabel": "Oficinas",
+    "visible": true
   },
   {
-    "title": "Nuevas Rutas Buses",
-    "url": "https://www.behance.net/gallery/62094557/Nuevas-Rutas-Buses",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/1ff66a62094557.Y3JvcCwxOTI0LDE1MDYsMCww.jpg",
-    "size": "wide"
+    "title": "Digital Hive Agency - Branding",
+    "url": "https://www.behance.net/gallery/122068517/Digital-Hive-Agency-Branding",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/0a65e5122068517.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
+    "category": "branding",
+    "brand": "digital-hive",
+    "brandLabel": "Digital Hive",
+    "visible": true
+  },
+  {
+    "title": "Branding Transportes Zeit",
+    "url": "https://www.behance.net/gallery/122274021/Branding-Transportes-Zeit",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/67f87f122274021.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
+    "size": "wide",
+    "category": "branding",
+    "brand": "zeit",
+    "brandLabel": "Transportes Zeit",
+    "visible": true
+  },
+  {
+    "title": "Enlace 2030",
+    "url": "https://www.behance.net/gallery/65146243/Enlace-2030",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/3609c965146243.Y3JvcCw5MDMsNzA2LDUxOSw3NQ.png",
+    "category": "branding",
+    "brand": "enlace-2030",
+    "brandLabel": "Enlace 2030",
+    "visible": true
+  },
+  {
+    "title": "Cordonería Chike",
+    "url": "https://www.behance.net/gallery/64957353/Cordoneria-Chike",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/091de964957353.5ae343533edac.jpg",
+    "category": "branding",
+    "brand": "chike",
+    "brandLabel": "Cordonería Chike",
+    "visible": true
+  },
+
+  {
+    "title": "SinTraUnif, Logotipo y Website",
+    "url": "https://www.behance.net/gallery/122286113/SinTraUnif-Logotipo-y-Website",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/fb088f122286113.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
+    "category": "web",
+    "brand": "sintraunif",
+    "brandLabel": "SinTraUnif",
+    "visible": true
+  },
+  {
+    "title": "Blindatek, Logotipo y Website",
+    "url": "https://www.behance.net/gallery/122285871/Blindatek-Logotipo-y-Website",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/923b66122285871.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
+    "category": "web",
+    "brand": "blindatek",
+    "brandLabel": "Blindatek",
+    "visible": true
+  },
+  {
+    "title": "Aerozono, Logotipo y Website",
+    "url": "https://www.behance.net/gallery/122285569/Aerozono-Logotipo-y-Website",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/738d86122285569.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
+    "category": "web",
+    "brand": "aerozono",
+    "brandLabel": "Aerozono",
+    "visible": true
+  },
+  {
+    "title": "App Corporativa Subus",
+    "url": "https://www.behance.net/gallery/70531885/App-Corporativa-Subus",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/d4f60270531885.Y3JvcCwyNzYxLDIxNjAsNjY5LDA.jpg",
+    "category": "web",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
+  },
+
+  {
+    "title": "Rediseño Packaging Hummo",
+    "url": "https://www.behance.net/gallery/122277281/Rediseno-Packaging-Hummo",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/c5a8b5122277281.Y3JvcCw5MzMsNzMwLDMwNCww.jpg",
+    "size": "wide",
+    "category": "packaging",
+    "brand": "hummo",
+    "brandLabel": "Hummo",
+    "visible": true
+  },
+  {
+    "title": "Packaging Hummo",
+    "url": "https://www.behance.net/gallery/122273139/Packaging-Hummo",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/13d5a8122273139.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
+    "category": "packaging",
+    "brand": "hummo",
+    "brandLabel": "Hummo",
+    "visible": true
+  },
+
+  {
+    "title": "Catálogos, Manuales y Fichas Técnicas Aerovan",
+    "url": "https://www.behance.net/gallery/122072789/Catalogos-Manuales-y-Fichas-Tcnicas-Aerovan",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/f2bd91122072789.Y3JvcCwxMzgzLDEwODIsNiww.jpg",
+    "category": "editorial",
+    "brand": "aerovan",
+    "brandLabel": "Aerovan",
+    "visible": true
+  },
+  {
+    "title": "Manual del Conductor",
+    "url": "https://www.behance.net/gallery/65137059/Manual-del-Conductor",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/81fe6a65137059.Y3JvcCwyMDUwLDE2MDUsMjI3LDA.jpg",
+    "category": "editorial",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
+  },
+  {
+    "title": "Manual de Señalética",
+    "url": "https://www.behance.net/gallery/65126555/Manual-de-Senaltica",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/d1f3bb65126555.Y3JvcCwyNTYzLDIwMDYsMjIxLDA.jpg",
+    "category": "editorial",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
   },
   {
     "title": "Manual de Procedimientos",
     "url": "https://www.behance.net/gallery/65133643/Manual-de-Procedimientos",
-    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/85b3a265133643.Y3JvcCwyNzIwLDIxMjksNzc5LDA.jpg"
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/85b3a265133643.Y3JvcCwyNzIwLDIxMjksNzc5LDA.jpg",
+    "category": "editorial",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
+  },
+
+  {
+    "title": "Cordonería Chike - Publicidad, Papelería, E-Commerce",
+    "url": "https://www.behance.net/gallery/70475957/Cordoneria-Chike-Publicidad-Papeleria-E-Commerce",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/6e377570475957.Y3JvcCwzMzEzLDI1OTIsMjc4LDA.jpg",
+    "size": "wide",
+    "category": "publicidad",
+    "brand": "chike",
+    "brandLabel": "Cordonería Chike",
+    "visible": true
+  },
+  {
+    "title": "Informativo Nuevas Zonas Pagas",
+    "url": "https://www.behance.net/gallery/65137435/Informativo-Nuevas-Zonas-Pagas",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/4dfb5865137435.Y3JvcCwxMDk5LDg2MCwwLDExNg.jpg",
+    "category": "publicidad",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
+  },
+  {
+    "title": "Papertoy Bus Subus",
+    "url": "https://www.behance.net/gallery/65138705/Papertoy-Bus-Subus",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/c088ce65138705.Y3JvcCw3MjYsNTY4LDQ3NiwzMDg.jpg",
+    "category": "publicidad",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
+  },
+
+  {
+    "title": "Social Images for Hummo",
+    "url": "https://www.behance.net/gallery/113660835/Social-Images-for-Hummo",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/a86d5d113660835.Y3JvcCwxNjYyLDEzMDAsMCww.jpg",
+    "category": "social",
+    "brand": "hummo",
+    "brandLabel": "Hummo",
+    "visible": true
+  },
+
+  {
+    "title": "Nuevas Rutas Buses",
+    "url": "https://www.behance.net/gallery/62094557/Nuevas-Rutas-Buses",
+    "image": "https://mir-s3-cdn-cf.behance.net/projects/404/1ff66a62094557.Y3JvcCwxOTI0LDE1MDYsMCww.jpg",
+    "size": "wide",
+    "category": "publicidad",
+    "brand": "subus",
+    "brandLabel": "SUBUS",
+    "visible": true
   }
 ]
